--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,11 +8,13 @@
     "playwright.config.*"
   ],
   "compilerOptions": {
+    "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"]
+    "types": [
+      "node"
+    ]
   }
 }
