Update patient dashboard view: integrate @headlessui/vue for tabbed interface, implement patient selection and health check functionality, and enhance data display with detailed medical history and health parameters.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@vueuse/core": "^12.4.0",
     "element-plus": "^2.9.3",
