Add Pinia state management and implement system-wide audit logging

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@heroicons/vue": "^2.2.0",
     "@vueuse/core": "^12.4.0",
     "element-plus": "^2.9.3",
+    "pinia": "^2.3.1",
+    "pinia-plugin-persistedstate-2": "^2.0.28",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "zod": "^3.24.1"
